--- a/JavaScript_Dom/JS_DOM_EVENTS/index.html
+++ b/JavaScript_Dom/JS_DOM_EVENTS/index.html
@@ -1,12 +1,30 @@
+<!-- @format -->
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS DOM EVENTS</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>DOM er ajke special events</h1>
+    <button title="This is a Tooltip" onclick="console.log(7)">Click Me</button>
+    <button onclick="document.body.style.background='yellow'">
+      Make Yellow
+    </button>
+    <!-- option 2 -->
+    <button onclick="makeRed()">Make Red</button>
+    <!-- option 3 -->
+    <button id="make-blue">Make Blue</button>
+    <button id="make-purple">Make Purple</button>
+    <!-- option 4 -->
+    <button id="make-pink">Make Pink</button>
+    <button id="make-green">Make Green</button>
+    <button id="make-goldenrod">Make goldenRod</button>
     <script src="js/events.js"></script>
-</body>
+    <script>
+      
+    </script>
+  </body>
 </html>
