--- a/JavaScript_Dom/JS_DOM_EVENTS/comment-box.html
+++ b/JavaScript_Dom/JS_DOM_EVENTS/comment-box.html
@@ -8,7 +8,7 @@
     <title>Add New Comment</title>
   </head>
   <body>
-    <h1>Please add your comment</h1>
+    <h1>Please add your comment here</h1>
     <div id="comment-container">
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt nobis
