--- a/JavaScript_Dom/DOM_intro/summary.html
+++ b/JavaScript_Dom/DOM_intro/summary.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <main id="main-container">
+      <!-- section*3>h1{Section title-$}+li*4{List item-$} -->
       <section>
         <h1 class="section-title">Section title-1</h1>
         <ul>
