--- a/JavaScript_Dom/JS_DOM_EVENTS/event-summary.html
+++ b/JavaScript_Dom/JS_DOM_EVENTS/event-summary.html
@@ -34,16 +34,24 @@
         });
 
       // option2: recap
-      document
-        .getElementById("btn-update")
-        .addEventListener("click", function () {
-          const inputField = document.getElementById("input-field");
-          const inputText = inputField.value;
+      // document
+      //   .getElementById("btn-update")
+      //   .addEventListener("click", function () {
+      //     const inputField = document.getElementById("input-field");
+      //     const inputText = inputField.value;
 
-          const p = document.getElementById("input-text-display");
-          p.innerText = inputText;
-          inputField.value = "";
-        });
+      //     const p = document.getElementById("input-text-display");
+      //     p.innerText = inputText;
+      //     inputField.value = "";
+      //   });
+      document.getElementById("btn-update").addEventListener("click", function () {
+        const inputField = document.getElementById("input-field");
+        const inputText = inputField.value;
+        
+        const p = document.getElementById("input-text-display");
+        p.innerText = inputText;
+        inputField.value = "";
+      })
     </script>
   </body>
 </html>
