--- a/JavaScript_Dom/JS_DOM_EVENTS/bubble.html
+++ b/JavaScript_Dom/JS_DOM_EVENTS/bubble.html
@@ -1,21 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Event Bubble</title>
-</head>
-<body>
+  </head>
+  <body id="body">
     <h1>Exploring Event Bubble</h1>
-    <section>
-        <ul>
-            <li>Lorem, ipsum.</li>
-            <li>Ipsum, aliquid?</li>
-            <li>Facilis, cumque.</li>
-            <li>Illum, saepe!</li>
-            <li>Officia, aperiam!</li>
-            <li>Temporibus, magnam!</li>
-        </ul>
+    <section id="list-container">
+      <ul id="list-ul">
+        <li id="item-1">Lorem, ipsum.</li>
+        <li id="item-2">Ipsum, aliquid?</li>
+        <li id="item-3">Facilis, cumque.</li>
+        <li id="item-4">Illum, saepe!</li>
+        <li id="item-5">Officia, aperiam!</li>
+        <li id="item-6">Temporibus, magnam!</li>
+      </ul>
     </section>
-</body>
+    <script>
+      document.getElementById("item-2").addEventListener("click", function () {
+        console.log("Item-2 clicked");
+      });
+      docment.getElementById("list-ul").addEventListener("click", function () {
+        console.log("ul clicked");
+      });
+      docment
+        .getElementById("list-container")
+        .addEventListener("click", function () {
+          console.log("ul clicked");
+        });
+      docment.getElementById("body").addEventListener("click", function () {
+        console.log("body of the html clicked");
+      });
+    </script>
+  </body>
 </html>
