--- a/EXPLORE-API/Fetching/index.html
+++ b/EXPLORE-API/Fetching/index.html
@@ -10,6 +10,6 @@
   <body>
     <button onclick="loadData()">Load Data</button>
     <script src="js-fetch/fetch.js"></script>
-    <script src></script>
+    <script src="app.js"></script>
   </body>
 </html>
