--- a/EXPLORE-API/Fetching/index.html
+++ b/EXPLORE-API/Fetching/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <button onclick="loadData()">Load Data</button>
+    <button onclick="loadData2()">Load Data2</button>
     <script src="js-fetch/fetch.js"></script>
     <script src="app.js"></script>
   </body>
