--- a/EXPLORE-API/Fetching/index.html
+++ b/EXPLORE-API/Fetching/index.html
@@ -10,6 +10,7 @@
   <body>
     <button onclick="loadData()">Load Data</button>
     <button onclick="loadData2()">Load Data2</button>
+    <button onclick="loadUsers()">Load Users</button>
     <script src="js-fetch/fetch.js"></script>
     <script src="app.js"></script>
   </body>
