--- a/EXPLORE-API/Fetching/index.html
+++ b/EXPLORE-API/Fetching/index.html
@@ -11,7 +11,9 @@
     <button onclick="loadData()">Load Data</button>
     <button onclick="loadData2()">Load Data2</button>
     <button onclick="loadUsers()">Load Users</button>
+    <button onclick="loadUsers2()">Load Users2</button>
     <script src="js-fetch/fetch.js"></script>
+    <script src="js-fetch/index.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
