--- a/EXPLORE-API/Fetching/index.html
+++ b/EXPLORE-API/Fetching/index.html
@@ -12,6 +12,12 @@
     <button onclick="loadData2()">Load Data2</button>
     <button onclick="loadUsers()">Load Users</button>
     <button onclick="loadUsers2()">Load Users2</button>
+
+    <div class="users-container">
+      <ul id="users-list"></ul>
+    </div>
+
+    <!-- script -->
     <script src="js-fetch/fetch.js"></script>
     <script src="js-fetch/index.js"></script>
     <script src="app.js"></script>
